ChangeLog for the Qt GUI to Astrophotography

20200820:
	* portability in HeartBeat.cpp

20200819:
	* add CallbackIdentity mixin class
	* turn callback classes into QObjects and use messages instead
	  of method calls to references (which run the danger of the
	  instance going away and the call crashing the system)

20200802:
	* convert filterwheel to use callbacks
	* Add heartbeat lost logic to the HeartBeat class
	* decouple timer changes for QTimer in systeminfowidget
	* add dead-logic to the HeartWidget
	* add signals for reconnecting for other widgets 
	* add global SystemInfoWidget for registration of heartbeat clients

20200801:
	* add HeartWidget
	* add callback to ccdcontrollerwidget (uncommented the update worker
	  thread too, everything still seems to work)

2020731:
	* make sure connection is established right at the beginning
	* fix typos
	* fix a bug of callbacks not being correctly unregistered in
	  coolercontrollerwidget and mountcontrollerwidget
	* add process size display

2020717:
	* fixing grid display in the StarChartWidget
	* add planet display in the StarChartWidget
	* separate the PlanetDrawing from the SkyDrawing so that it can be used
	  in the StarChartWidget
	* add constellation lines to StarChartWidget
	* add wide resolution to the finder chart
	* add configurable limit magnitude to StarChartWidget
	* background and border for the deep sky object labels

20200710:
	* migrate to Qt5.15
	* portability fixes

20200206:
	* added callback to coolercontrollerwidget
	* add CoolerCallbackI.cpp
	* remove coolerupdatework.cpp

20200205:
	* converted guideportcontrollerwidget to using callbacks

20200203:
	* convert the mountcontroller widget from polling to callbacks

20200130:
	* add system info widget
	* integrate systeminfo widget into main window

20200129:
	* remove selection of device in device controllers that cannot have
	  multiple devices: mount, adaptiveoptics, guideport
	* remove dependency on GuiderDescriptor classes

20200128: